--- a/package.json
+++ b/package.json
@@ -18,9 +18,46 @@
         "run": "alpenx run packageName"
     },
     "dependencies": {
-        "@alpen/alpenx": "1.0.0"
+        "nps": "5.9.5",
+        "@blueprintjs/core": "3.4.0",
+        "@types/validator": "9.4.1",
+        "@types/react": "16.4.12",
+        "@types/react-dom": "16.0.7",
+        "@types/react-router-dom": "4.3.0",
+        "@types/react-router": "4.0.30",
+        "@types/enzyme-adapter-react-16": "1.0.3",
+        "@types/node": "10.9.2",
+        "react": "16.4.2",
+        "react-dom": "16.4.2",
+        "react-flexbox-grid": "2.1.2",
+        "react-waypoint": "8.0.3",
+        "validator": "10.7.0",
+        "react-router": "4.3.1",
+        "react-router-dom": "4.3.1",
+        "jest-svg-transformer": "1.0.0"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "@blueprintjs/tslint-config": "1.5.0",
+        "@types/enzyme": "3.1.13",
+        "@types/jest": "23.3.1",
+        "enzyme": "3.5.0",
+        "enzyme-adapter-react-16": "1.3.0",
+        "husky": "0.14.3",
+        "jest": "23.5.0",
+        "jest-enzyme": "6.0.4",
+        "node-sass": "4.9.3",
+        "npm-run-all": "4.1.3",
+        "parcel": "1.9.7",
+        "parcel-bundler": "^1.10.3",
+        "rimraf": "2.6.2",
+        "sinon": "6.1.5",
+        "stylelint": "9.5.0",
+        "stylelint-config-recommended": "2.1.0",
+        "ts-jest": "23.1.4",
+        "tslint": "5.11.0",
+        "typedoc": "0.12.0",
+        "typescript": "3.0.1"
+    },
     "engines": {
         "node": ">=10.6.0"
     },
