--- a/schematic-examples/node-schematic-package-example/package.json
+++ b/schematic-examples/node-schematic-package-example/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "schematic-1",
+    "name": "node-schematic-package-example",
     "version": "0.0.1",
     "description": "Desccc",
     "main": "index.js",
@@ -9,7 +9,7 @@
     "author": "The Pact",
     "repository": {
         "type": "git",
-        "url": "git@gitlab.com:the-pact/starter-kits/frontend-starter-kit.git"
+        "url": "xxx"
     },
     "license": "Check LICENSE file"
 }
