--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     },
     "dependencies": {
         "@types/node": "10.14.8",
+        "@types/mkdirp": "0.5.2",
         "@types/ncp": "2.0.1",
         "@types/listr": "0.14.0",
         "@types/inquirer": "6.0.3",
@@ -68,7 +69,9 @@
         "listr": "0.14.3",
         "ncp": "2.0.0",
         "pkg-install": "1.0.0",
-        "md5-file": "4.0.0"
+        "md5-file": "4.0.0",
+        "find-up": "4.0.0",
+        "mkdirp": "0.5.1"
     },
     "devDependencies": {
         "@types/jest": "24.0.13",
