--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
         "pkg-install": "1.0.0",
         "md5-file": "4.0.0",
         "find-up": "4.0.0",
-        "mkdirp": "0.5.1"
+        "mkdirp": "0.5.1",
+        "get-stream": "5.1.0"
     },
     "devDependencies": {
         "@types/jest": "24.0.13",
