--- a/templates/root/files/package.json
+++ b/templates/root/files/package.json
@@ -2,31 +2,28 @@
     "name": "{{name}}",
     "version": "{{version}}",
     "description": "{{description}}",
-    "main": "index.js",
+    "private": "{{private}}",
     "scripts": {
-        "add": "alpen run add",
-        "remove": "alpen run remove",
-        "serve": "alpen run serve",
-        "build": "alpen run build",
-        "lint": "alpen run lint",
-        "test": "alpen run test",
-        "test:watch": "alpen run test:watch",
-        "docs": "alpen run docs",
-        "clean": "alpen run clean",
+        "add": "alpen add",
+        "remove": "alpen remove",
+        "serve": "alpen serve",
+        "build": "alpen build",
+        "test": "alpen test",
         "run": "alpen run",
-        "publish": "npm run publish"
+        "publish": "npm publish"
     },
     "dependencies": {
-        "alpen": "0.0.1"
+        "alpen": "{{alpen-version}}"
     },
-    "devDependencies": {},
+    "devDependencies": {
+    },
     "engines": {
-        "node": ">=10.6.0"
+        "node": ">={{node-version-restriction}}"
     },
     "author": "{{author}}",
     "repository": {
-        "type": "git",
-        "url": "{{repository}}"
+        "type": "{{repository-type}}",
+        "url": "{{repository-url}}"
     },
     "license": "Check LICENSE file"
 }
