--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
         "md5-file": "4.0.0",
         "find-up": "4.0.0",
         "mkdirp": "0.5.1",
-        "get-stream": "5.1.0"
+        "get-stream": "5.1.0",
+        "smv": "1.0.0"
     },
     "devDependencies": {
         "@types/jest": "24.0.13",
